--- a/cli/decompose/prompt_modules/subtask_constraint_assign/_prompt/system_template.jinja2
+++ b/cli/decompose/prompt_modules/subtask_constraint_assign/_prompt/system_template.jinja2
@@ -8,7 +8,7 @@ You will be provided with the following 4 parameters inside their respective tag
 4. <all_constraints> : A list of candidate (possible) constraints that can be assigned to the target task.
 </parameters>
 
-The <all_constraints> list contain the constraints of all tasks on the <execution_plan>, your job is to filter and select only the constraints belonging to your target task.
+The <all_constraints> is a list of constraints identified for the entire <execution_plan>, your job is to filter and select only the constraints belonging to your target task.
 It is possible that none of the constraints in the <all_constraints> are relevant or related to your target task.
 
 Below, enclosed in <general_instructions> tags, are instructions to guide you on how to complete your assignment:
